--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main, master ]
 
+permissions:
+  contents: read
+  actions: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,13 +18,13 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
     
     - name: Cache Maven dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -32,9 +36,10 @@ jobs:
     - name: Run tests
       run: mvn test
     
-    - name: Upload trace
-      uses: actions/upload-artifact@v3
+    - name: Upload trace files
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-traces
         path: trace/
+        retention-days: 7
