--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,6 @@ on:
   pull_request:
     branches: [ main, master ]
 
-permissions:
-  contents: read
-  actions: read
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -30,8 +26,10 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     
-    - name: Install Playwright browsers
-      run: mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install --with-deps chromium"
+    - name: Setup Playwright
+      uses: microsoft/playwright-github-action@v1
+      with:
+        browsers: 'chromium'
     
     - name: Run tests
       run: mvn test
